compose: Remove the unused span wrapper for buttons.

--- a/web/templates/compose.hbs
+++ b/web/templates/compose.hbs
@@ -15,21 +15,21 @@
             <span class="new_message_button reply_button_container" data-tooltip-template-id="compose_reply_message_button_tooltip_template">
                 <button type="button" class="button small rounded compose_reply_button"
                   id="left_bar_compose_reply_button_big">
-                    <span class="compose_reply_button_label">{{t 'Compose message' }}</span>
+                    {{t 'Compose message' }}
                 </button>
             </span>
             <span class="new_message_button mobile_button_container">
                 <button type="button" class="button small rounded compose_mobile_button"
                   id="left_bar_compose_mobile_button_big"
                   data-tooltip-template-id="left_bar_compose_mobile_button_tooltip_template">
-                    <span>+</span>
+                    +
                 </button>
             </span>
             <span class="new_message_button stream_button_container">
                 <button type="button" class="button small rounded compose_stream_button"
                   id="left_bar_compose_stream_button_big"
                   data-tooltip-template-id="new_topic_message_button_tooltip_template">
-                    <span class="compose_stream_button_label">{{t 'New topic' }}</span>
+                    {{t 'New topic' }}
                 </button>
             </span>
             {{#unless embedded }}
@@ -37,7 +37,7 @@
                 <button type="button" class="button small rounded compose_private_button"
                   id="left_bar_compose_private_button_big"
                   data-tooltip-template-id="new_direct_message_button_tooltip_template">
-                    <span class="compose_private_button_label">{{t 'New direct message' }}</span>
+                    {{t 'New direct message' }}
                 </button>
             </span>
             {{/unless}}
