compose: Rename "New topic" button class and id.

--- a/web/templates/compose.hbs
+++ b/web/templates/compose.hbs
@@ -26,8 +26,8 @@
                 </button>
             </span>
             <span class="new_message_button stream_button_container">
-                <button type="button" class="button small rounded compose_stream_button"
-                  id="left_bar_compose_stream_button_big"
+                <button type="button" class="button small rounded compose_new_topic_button"
+                  id="new_topic_button"
                   data-tooltip-template-id="new_topic_message_button_tooltip_template">
                     {{t 'New topic' }}
                 </button>
