--- a/web/styles/dark_theme.css
+++ b/web/styles/dark_theme.css
@@ -482,7 +482,8 @@
     .user-status-content-wrapper,
     #custom-expiration-time-input,
     #searchbox #search_query,
-    #compose_recipient_box {
+    #compose_recipient_box,
+    #compose_controls .reply_button_container {
         background-color: hsl(0deg 0% 0% / 20%);
         border-color: hsl(0deg 0% 0% / 60%);
         color: inherit;
